# ikstr

./: CMakeLists.txt  LICENSE  README.md
debian/: Release
debian/pool/: ikstr-1.0-amd64.deb  ikstr-1.01-amd64.deb  ikstr-1.02-amd64.deb  ikstr-1.03-amd64.deb  ikstr-1.04-amd64.deb
inc/: ikstr.h  ikstr_alloc.h
src/: ikstr.c
tests/: main.c
